Loading BMP files #43472

Closed
opened 2015-01-29 12:17:17 +01:00 by Auke · 10 comments

System Information
Windows 7 64 Bit
Intel i5-3450
Nvidia GeForce 560 GTX Ti

Blender Version
Broken: 2.73 b4d8fb5

Short description of error
I want to load some maps with the file fomat BMP. The biggest one is 64mb. Right in the moment I enter the file browser (in the right directory) blender crashes instantly, when I choose display mode "thumbnail".

Exact steps for others to reproduce the error
In my case (it "works" every time I use the file browser):
Import -> Import Image as Planes -> Browse to the directoy -> Display Mode "Thumbnail" -> Crash

No need to attach a .blendfile.

**System Information** Windows 7 64 Bit Intel i5-3450 Nvidia GeForce 560 GTX Ti **Blender Version** Broken: 2.73 b4d8fb5 **Short description of error** I want to load some maps with the file fomat BMP. The biggest one is 64mb. Right in the moment I enter the file browser (in the right directory) blender crashes instantly, when I choose display mode "thumbnail". **Exact steps for others to reproduce the error** In my case (it "works" every time I use the file browser): Import -> Import Image as Planes -> Browse to the directoy -> **Display Mode "Thumbnail"** -> Crash No need to attach a .blendfile.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Gumminerd

Added subscriber: @Gumminerd

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Please find the image that causes the crash and upload it here (or a link to it), otherwise we cant redo the error.

Please find the image that causes the crash and upload it here (or a link to it), otherwise we cant redo the error.
Author
http://visuelleverschmutzung.com/top.bmp and http://visuelleverschmutzung.com/iceform.bmp
Bastien Montagne self-assigned this 2015-01-29 19:53:19 +01:00

Can confirm the crash - IMBuf tries to allocate a buffer for an image of 4084 * -4048 pixels… :P

Can confirm the crash - IMBuf tries to allocate a buffer for an image of 4084 * -4048 pixels… :P
Author

Whoops, 4048 instead of 4096 :D
But well - I think this resolution has to work, too.

Whoops, 4048 instead of 4096 :D But well - I think this resolution has to work, too.

This issue was referenced by d56c9fb420

This issue was referenced by d56c9fb42031d74e012a5817a352c5d0b3c2f671

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit d56c9fb420.

Closed by commit d56c9fb420.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43472
No description provided.