Fix T43472: IMBuf: crash on loading top-to-bottom bitmaps.

Height of bitmap may be negative, which indicates a 'top to bottom' line storage.

Also, fixed header handling, bitmaps using other header than 'BM' would most likely
have lead to errors/crashes too...